[project]
name = "visiontrainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "lxml>=6.0.2",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "rfdetr>=1.3.0",
    "ultralytics>=8.3.241",
]
